--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <title>Nji</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <meta content="" name="keywords" />
-    <meta content="" name="description" />
+    <meta content="Nji" name="keywords" />
+    <meta content="Nji Patrick" name="description" />
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon" />
@@ -112,8 +112,8 @@
       <div class="collapse navbar-collapse py-4 py-lg-0" id="navbarCollapse">
         <div class="navbar-nav ms-auto">
           <a href="index.html" class="nav-item nav-link active">Home</a>
-          <a href="about.html" class="nav-item nav-link">About</a>
-          <a href="service.html" class="nav-item nav-link">Education & Career</a>
+          <a href="" class="nav-item nav-link"></a>
+          <a href="" class="nav-item nav-link"></a>
           <div class="nav-item dropdown">
             <a
               href="#"
@@ -122,14 +122,14 @@
               >De-Cruise</a
             >
             <div class="dropdown-menu rounded-0 rounded-bottom m-0">
-              <a href="animal.html" class="dropdown-item">Our Animals</a>
-              <a href="membership.html" class="dropdown-item">Membership</a>
-              <a href="visiting.html" class="dropdown-item">Visiting Hours</a>
-              <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-              <a href="404.html" class="dropdown-item">404 Page</a>
+              <a href="" class="dropdown-item"></a>
+              <a href="" class="dropdown-item"></a>
+              <a href="" class="dropdown-item"></a>
+              <a href="" class="dropdown-item"></a>
+              <a href="" class="dropdown-item"></a>
             </div>
           </div>
-          <a href="contact.html" class="nav-item nav-link">Contact</a>
+          <a href="" class="nav-item nav-link"></a>
         </div>
         <a href="" class="btn btn-primary"
           >NenBelAID<i class="fa fa-arrow-right ms-3"></i
